--- a/admin/css/panel.css
+++ b/admin/css/panel.css
@@ -370,7 +370,7 @@ font-style: italic;
 
 .info, .success, .warning, .error {
 border: 1px solid;
-margin: 10px 0px;
+margin: 8px 0px 0px 0px;
 padding: 5px 5px 5px 25px;
 background-repeat: no-repeat;
 background-position: 5px center;
