Installer uses admin-styled buttons.

--- a/installer/css/stylesheet.css
+++ b/installer/css/stylesheet.css
@@ -75,3 +75,16 @@ font-weight: bold;
 float: left;
 width: 125px;
 }
+
+.button {
+background: url("../images/buttons/gradient.gif") repeat-x scroll 0 100% #FFAC47;
+border-color: #ED6502 #A04300 #A04300 #ED6502;
+border-style: solid;
+border-width: 1px;
+color: #FFFFFF;
+cursor: pointer;
+font: bold 12px arial,helvetica,sans-serif;
+padding: 1px 7px 2px;
+text-align: center !important;
+white-space: nowrap;
+}
