Improves the 'delay pages' logic.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ border-style: none;
 
 /**************************** Page ******************************/
 
-.cmtx_page_id_alert {
+.cmtx_identifier_alert {
 color: #FFFFFF;
 background-color: #EE0000;
 }
