Various improvements to page setup handling.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -4,7 +4,7 @@ border-style: none;
 
 /**************************** Page ******************************/
 
-.cmtx_identifier_alert {
+.cmtx_page_alert {
 color: #FFFFFF;
 background-color: #EE0000;
 }
