Adds settings to disable or hide the form fields when supplying login details.

--- a/admin/css/panel.css
+++ b/admin/css/panel.css
@@ -141,6 +141,10 @@ label.layout_form_captchas_recaptcha {
 width: 75px;
 }
 
+label.layout_form_states {
+width: 60px;
+}
+
 label.layout_powered {
 width: 60px;
 }
